--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -4,7 +4,7 @@ spring:
         driverClassName: com.mysql.jdbc.Driver
         druid:
             first:  #数据源1
-                url: jdbc:mysql://localhost:3306/filecoin_fast?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
+                url: jdbc:mysql://172.16.9.210:3306/filecoin_fast?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
                 username: root
                 password: 123456
             second:  #数据源2
