--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -4,9 +4,9 @@ spring:
         driverClassName: com.mysql.jdbc.Driver
         druid:
             first:  #数据源1
-                url: jdbc:mysql://172.16.9.210:3306/filecoin_fast?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
-                username: root
-                password: 123456
+                url: jdbc:mysql://120.79.242.64:3306/filecoin_fast?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
+                username: filecoinfast
+                password: Hello129281
             second:  #数据源2
                 url: jdbc:mysql://172.16.9.210:3306/filecoin_fast?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
                 username: root
@@ -49,6 +49,9 @@ spring:
             starttls:
               enable: true
               required: true
+            ssl:
+              enable: true
+      port: 465
     thymeleaf:
       mode: HTML5
       cache: false
