修改小bug以及处理一些问题

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -39,8 +39,8 @@ spring:
     mail:
       protocol: smtp
       host: smtp.qq.com
-      username: 316955509@qq.com
-      password: fzhgucnqbvejbife
+      username: support@ipfsun.com
+      password: wnkqslunibgccaga
       default-encoding: UTF-8
       properties:
         mail:
