增加新版css样式等,将除了注册页全部改回静态html页面

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ server:
         min-spare-threads: 30
     port: 8080
     connection-timeout: 5000
-    context-path: /filecoin-app
+#    context-path: /
 
 spring:
     # 环境 dev|test|pro
